@@ -1,6 +1,13 @@
-# ChangeLog for sys-apps/mcollective
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# ChangeLog for app-admin/mcollective
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*mcollective-1.0.0 (06 Jan 2011)
+
+  06 Jan 2011; Lance Albertson <ramereth@gentoo.org>
+  -mcollective-0.4.5.ebuild, -mcollective-0.4.6.ebuild,
+  -mcollective-0.4.7.ebuild, +mcollective-1.0.0.ebuild:
+  Version bump, update SRC_URI to new location, cleanup
 
 *mcollective-0.4.7 (30 Jun 2010)
 
